--- a/chineselaRealEstateAgentListScrape.ipynb
+++ b/chineselaRealEstateAgentListScrape.ipynb
@@ -86,7 +86,7 @@
         "#print(Add)\n",
         "cdata={\"ID\":No_o, \"Name\":Name,\"Contact\":Contact,\"Address\":Add}\n",
         "df=pd.DataFrame(data=cdata)\n",
-        "df.to_csv(\"chineselaRealEstateAgentList.csv\",header=True,index=False)\n"
+        "df.to_csv(\"chineselaRealEstateAgentList.csv\",encoding='utf_8_sig',header=True,index=False)\n"
       ],
       "execution_count": 2,
       "outputs": [
